phaser: initialize decentralized game template (#1)
* Initial commit

* deploy example game on pages

* Update README.md

* Update README.md

* add ipfs deployment github action

* add create release step

* Update README.md

* Update README.md

* Update README.md

* compile with parcel, move files to root

* remove duplicate files

* Update release.yaml

Co-authored-by: Paul Gadi <paulgadi@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,19 @@ dist
 
 # TernJS port file
 .tern-port
+
+# System and IDE files
+Thumbs.db
+.DS_Store
+.idea
+*.suo
+*.sublime-project
+*.sublime-workspace
+
+# Build Files
+dist
+.parcel-cache
+
+# Vendors
+node_modules/
+
