--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "decentralized-game-template",
-  "version": "0.0.1",
-  "description": "Decentralized Game Example",
+  "name": "energy-saber",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:ethlisboa/energy-saber.git",
+  "author": "EthLisbon Hackers",
+  "license": "Apache-2.0",
+  "private": false,
   "scripts": {
-    "serve": "sirv",
-    "start": "parcel index.html --open",
-    "build": "npm run clean && parcel build index.html --dist-dir ./dist",
-    "clean": "rimraf ./dist ./parcel-cache"
+    "dev": "cross-env NODE_ENV=development webpack serve",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alto-io/decentralized-game-example"
+  "dependencies": {
+    "phaser": "3.55.2"
   },
-  "author": "outplay.games",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alto-io/decentralized-game-example/issues"
-  },
-  "homepage": "https://github.com/alto-io/decentralized-game-example#readme",
   "devDependencies": {
-    "@parcel/config-default": "2.0.0-beta.1",
-    "parcel": "2.0.0-beta.1",
-    "parcel-reporter-static-files-copy": "^1.2.2",
-    "sirv-cli": "^1.0.11"
-  },
-  "dependencies": {},
-  "staticFiles": {
-    "staticPath": "assets",
-    "staticOutPath": "assets",
-    "watcherGlob": "**"
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@types/node": "^16.11.3",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "html-webpack-plugin": "^5.4.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.4.0",
+    "html-loader": "^3.0.0",
+    "json-loader": "^0.5.7",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.2.4",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   }
 }
