--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.6.6",
+    "buffer": "^6.0.3",
+    "ethers": "^5.5.1",
     "phaser": "3.55.2",
     "web3modal": "^1.9.4"
   },
