--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "build": "cross-env NODE_ENV=production webpack --progress"
   },
   "dependencies": {
-    "phaser": "3.55.2"
+    "@walletconnect/web3-provider": "^1.6.6",
+    "buffer": "^6.0.3",
+    "ethers": "^5.5.1",
+    "phaser": "3.55.2",
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
