--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -8,10 +8,10 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
-        node-version: "16.10"
+        node-version: "lts/fermium"
     - name: Install Dependencies
       run: |
-        yarn install
+        yarn install --frozen-lockfile
     - name: Run Production Build
       run: |
         yarn build
