--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "buffer": "^6.0.3",
     "ethers": "^5.5.1",
     "phaser": "3.55.2",
+    "spacexcalibur-contracts": "^1.0.0",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
