--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,17 +4,20 @@
       "strict": true,
       "noImplicitReturns": true,
       "noImplicitAny": true,
-      "module": "es6",
+      "module": "esnext",
+      "allowSyntheticDefaultImports": true,
       "moduleResolution": "node",
       "resolveJsonModule": true,
+      "isolatedModules": true,
       "esModuleInterop": true,
       "target": "es5",
       "allowJs": true,
-      "baseUrl": ".",
+      "baseUrl": "."
     },
     "include": [
       "./index.d.ts",
-      "**/*.ts"
+      "**/*.ts",
+      "**/*.json"
     ],
     "exclude": [
       "node_modules",
